crates/strider/tests/snapshots/v3__arm_thumb__calls__fib_recursive.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x548:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "5" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x548:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "18" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "18" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "24" [label="φ d1", shape=house, fillcolor="#163030"];
  "18" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v26" [color="#888888", style=dashed];
  "v26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="φ d0", shape=house, fillcolor="#163030"];
  "18" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v28" [color="#888888", style=dashed];
  "v28" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="φ r1", shape=house, fillcolor="#163030"];
  "18" -> "22" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "9" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v29" [color="#888888", style=dashed];
  "v29" -> "22" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="φ r0", shape=house, fillcolor="#163030"];
  "18" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "30" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "31" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v32" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v32" [color="#888888", style=dashed];
  "v32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v17" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="φ Mem", shape=house, fillcolor="#163030"];
  "18" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "6" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "33" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
